Updated code readability and fixed order book initial state logic in top orders worker.